new commit for second branch

--- a/static/static_dev/css/landing.css
+++ b/static/static_dev/css/landing.css
@@ -9,7 +9,7 @@ html, body{
 }
 
 .general-container{
-    background: url("img/eberhard-grossgasteiger-XLIKVFCGpBw-unsplash.jpg");
+    background: url("../../img/eberhard-grossgasteiger-XLIKVFCGpBw-unsplash.jpg");
     height: 100%;
 }
 
