--- a/static/static_dev/css/style.css
+++ b/static/static_dev/css/style.css
@@ -13,10 +13,17 @@ html, body{
     padding-bottom: 100px;
 }
 
+.wrapper-content{
+    overflow: auto;
+    padding-bottom: 180px;
+}
+
 .footer{
-    margin-bottom: -100px;
+    position: relative;
+    margin-top: -180px;
     background-color: white;
     height: 200px;
+    clear: both;
 }
 
 .section-top{
@@ -37,4 +44,57 @@ html, body{
     position: absolute;
     bottom: 15px;
     left: 70px;
+}
+
+.discount-container{
+    position: absolute;
+    top: 20%;
+    background: #55e073;
+    width: 30%;
+    color: white;
+    font-weight: 700;
+    padding: 10px 0 10px 0;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.section-delivery{
+    height: 300px;
+    background-color: darkgray;
+    text-align: center;
+    color: white;
+}
+
+.product-image-item{
+    padding: 5px;
+    margin-bottom: 5px;
+}
+
+.navbar-top{
+    min-height: 10px;
+    height: 20px;
+    background-color: darkgray;
+    border: none;
+    border-radius: 0;
+}
+
+.navbar-main{
+    background-color: #55e073;
+    border: none;
+    border-radius: 0;
+}
+
+.basket-container{
+    position: relative;
+    width: 400px;
+    padding: 15px 10px;
+}
+
+.basket-items{
+    position: absolute;
+    top: 50px;
+    width: 100%;
+    background-color: darkgray;
+    z-index: 10;
+    padding: 10px;
 }
