--- a/templates/landing/home.html
+++ b/templates/landing/home.html
@@ -4,8 +4,8 @@
 
 {% block content %}
     <div class="section-top">
-        <img src="{% static 'static/img/113832-Liv_Tyler-Arwen-The_Lord_of_the_Rings-elves-women-blue_eyes.jpg' %}"
-             class="img-responsive" width="100%">
+        <img src="{% static 'static/img/370901_QIC-2.png' %}"
+             class="img-responsive" width="100%", height="600">
     </div>
     <div class="section1">
         <div class="container">
@@ -19,8 +19,15 @@
                     <div class="col-lg-3">
                         <div class="product-item">
                             <div>
-                                <img src="{{ product_image.image.url }}" class="img-responsive" alt="image", width="180", height="200">
+                                <a href="{% url 'products:product' product_image.product.id %}">
+                                    <img src="{{ product_image.image.url }}" class="img-responsive" alt="image", width="180", height="200">
+                                </a>
                             </div>
+                            {% if product_image.product.discount %}
+                            <div class="discount-container">
+                                <span>{{ product_image.product.discount }}%</span>
+                            </div>
+                            {% endif %}
                             <h5>
                                 {{ product_image.product.name|truncatechars_html:30 }}
                             </h5>
@@ -39,11 +46,22 @@
             </div>
         </div>
     </div>
+    <div class="section-delivery">
+        <div>
+            <h3>
 
+            </h3>
+        </div>
+    </div>
     <div class="section2">
         <div class="container">
             <div class="row">
-                {% for product_image in product_images %}
+            <div class="col-lg-12">
+                    <h1 class="text-center">
+                        Backpacks
+                    </h1>
+                </div>
+                {% for product_image in product_images_backpacks %}
                     <div class="col-lg-3">
                         <div class="product-item">
                             <div>
@@ -71,7 +89,12 @@
     <div class="section3">
         <div class="container">
             <div class="row">
-                {% for product_image in product_images %}
+            <div class="col-lg-12">
+                    <h1 class="text-center">
+                       Phones
+                    </h1>
+                </div>
+                {% for product_image in product_images_phones %}
                     <div class="col-lg-3">
                         <div class="product-item">
                             <div>
