--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,8 @@
 <!-- Custom styles for this template -->
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+<nav class="navbar navbar-default navbar-top">
+
+    </nav>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4 navbar-main">
   <a class="navbar-brand" href="#">Top navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -16,9 +19,19 @@
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
       </li>
     </ul>
-    <form class="form-inline mt-2 mt-md-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+
+       <ul class="nav navbar-nav navbar-right">
+            <li>
+                <div class="basket-container">
+                    <a href="">basket </a>
+                    <div class="basket-items hidden">
+                        <ul class="">
+                            <li>w</li>
+                        </ul>
+                    </div>
+                </div>
+            </li>
+
+          </ul>
   </div>
 </nav>
